--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:clickable="true"
+        android:src="@drawable/ic_baseline_arrow_drop_up_24"
+        android:scaleType="center"
+        app:maxImageSize="56dp"
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toStartOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="parent"
